--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Feliz cumple Belu</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    hola mundo
+    <video class="videito" controls src="./Videos/lv_0_20220526231604.mp4"></video>
 </body>
 </html>
